--- a/_posts/2019-06-20-rebelcon-2019-talk.md
+++ b/_posts/2019-06-20-rebelcon-2019-talk.md
@@ -4,6 +4,7 @@ date: '2019-06-20 13:30:00'
 layout: post
 tags:
   - talks
+  - nlp
 ---
 
 For anyone who is interested, I've just posted slides for my talk [here](https://donagh.io/talks/). You can also check out the source code for the pipeline I demonstrated on [GitHub](https://github.com/donaghhorgan/twitter-sentiment-analysis).
